Fix wrapping issues, mirror stars/votes when published

--- a/app/styles/_recipe-form.sass
+++ b/app/styles/_recipe-form.sass
@@ -22,7 +22,7 @@
     color: #333
     display: block
     font-size: 20px
-    margin: 5px 0 25px
+    margin: 5px auto 25px
     padding: 5px
     resize: vertical
     width: 95%
@@ -42,6 +42,9 @@
   float: left
   margin: 2px 15px 0 0
 
+.recipe-form__number-input
+  margin-left: 0
+
 .parens
   display: block
   font-family: 'Architects Daughter', 'sans-serif'
@@ -54,7 +57,7 @@
   display: flex
   align-items: baseline
   justify-content: flex-end
-  margin: 45px 25px 0 0
+  margin: 45px 10px 0 0
 
 .recipe-form__save,
 .recipe-form__cancel
