--- a/app/styles/_recipe.sass
+++ b/app/styles/_recipe.sass
@@ -179,15 +179,15 @@ h3
   border-radius: 0 0 5px 5px
   color: lighten($nav-bg, 50%)
   display: flex
-  flex-wrap: wrap
+  flex-wrap: wrap-reverse
   font-size: 16px
-  justify-content: space-between
+  justify-content: flex-end
   margin: 25px -15px -15px -15px
   padding: 8px 15px
   i
     margin-right: 8px
   .credit-name
-    margin-left: 15px
+    margin-left: 5px
 
 .recipe__credits__author,
 .recipe__credits__publisher
